# mars_rover_ros2

./: CMakeLists.txt  README.md  package.xml  rover.xml
config/: camera_config.yaml  diff_drive.yaml  motor_controller_config.yaml  rover_controller_config.yaml  rover_controllers.yaml
config/camera/: realsense.yaml
description/ros2_control/: rover.ros2_control.xacro
description/urdf/: rover.urdf.xacro  rover_description.urdf.xacro
launch/: camera.launch.py  camera_monitor.launch.py  controller.launch.py  controller.py  nav.launch.py  rover.launch.py  view_rover.launch.py
src/: camera_monitor.cpp  control_interpreter.cpp  rover_system.cpp
src/include/: rover_system.hpp
